# ErisPulse-NCMusicBot

./: .gitignore  pyproject.toml
musicbot/: __init__.py  module.py
