[project]
name = "ErisPulse-NCMusicBot"
version = "2.0.0"
description = "基于 ErisPulse SDK 的网易云音乐点歌模块"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "NCMusicBot", email = "dev@example.com" } ]
dependencies = [
  "ErisPulse>=2.3.0",
  "aiohttp>=3.8.0",
]

[project.entry-points."erispulse.module"]
MusicBot = "musicbot.module:Main"

[tool.setuptools]
packages = ["musicbot"]

[tool.setuptools.package-dir]
"" = "."
